Thu Jan 12 22:31:57 GMT 2012  Olly Betts <olly@survex.com>

	* geospatial/latlong_distance_keymaker.cc: Check if the value string
	  is empty, rather than decoding to a LatLongCoords and then checking
	  that.

Thu Jan 12 22:18:05 GMT 2012  Olly Betts <olly@survex.com>

	* geospatial/latlong_distance_keymaker.cc,include/xapian/geospatial.h:
	  Rename “valno” member to “slot”.

Thu Jan 12 21:27:06 GMT 2012  Olly Betts <olly@survex.com>

	* geospatial/latlong_posting_source.cc,geospatial/latlongcoord.cc:
	  Fix include paths to serialise.h.

Fri Dec 16 03:05:17 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_termlisttable.cc,
	  backends/chert/chert_termlisttable.cc,
	  backends/multi/multi_postlist.cc,net/replicatetcpclient.cc,
	  net/serialise.cc,net/tcpserver.cc,tests/,
	  tests/harness/backendmanager_remoteprog.cc,tests/queryparsertest.cc,
	  tests/soaktest/soaktest_queries.cc,tests/termgentest.cc: Remove
	  unnecessary includes on "utils.h".

Fri Dec 16 02:57:49 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_database.cc,
	  backends/brass/brass_databasereplicator.cc,
	  backends/chert/chert_btreebase.cc,backends/chert/chert_database.cc,
	  backends/chert/chert_databasereplicator.cc,
	  net/remoteconnection.cc,tests/api_replicate.cc: Replace uses of
	  fdcloser class with new FD class.
	* common/utils.h: Remove fdcloser class.

Fri Dec 16 00:56:45 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Use a const int rather than a #define for
	  BUFSIZE.

Fri Dec 16 00:50:57 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Avoid leaking fds on exceptions in
	  truncated_copy().

Fri Dec 16 00:42:11 GMT 2011  Olly Betts <olly@survex.com>

	* common/fd.h: Oops, fix to actually compile.

Thu Dec 15 23:54:44 GMT 2011  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/fd.h: Add new FD class which wraps a file